--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,7 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    marker = folium.CircleMarker()\n",
+    "    marker = folium.CircleMarker(location = location(trip))\n",
     "    marker = folium.CircleMarker(location = [40.7589, -73.9851], radius=10)\n",
     "marker.add_to(manhattan_map)"
    ]
