Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,12 +479,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    return folium.CircleMarker()"
+    "    return folium.CircleMarker(location, radius=6)"
    ]
   },
   {
