--- a/index.ipynb
+++ b/index.ipynb
@@ -520,13 +520,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-29-747cb98c417f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-747cb98c417f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    locations - list(map(lambda trip: location trip, trips))\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def markers_from_trips(trips):\n",
     "    locations - list(map(lambda trip: location trip, trips))\n",
-    "    return list(map(lambda ))"
+    "    return list(map(lambda location: to_marker(location), locations))"
    ]
   },
   {
