--- a/index.ipynb
+++ b/index.ipynb
@@ -694,7 +694,8 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    pa"
+    "    for marker in markers:\n",
+    "        mardker.addto"
    ]
   },
   {
