--- a/index.ipynb
+++ b/index.ipynb
@@ -689,13 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in markers:\n",
-    "        mardker.addto"
+    "        mardker.add_to(map_obj)\n",
+    "    return map_obj"
    ]
   },
   {
